--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="main-container">
         <header id="header">
             <img src="https://cdn.discordapp.com/attachments/930935849825226784/930982895219245157/logo.png" id="header-img" width="120px" height="120px"> 
-            <h3 id="logo-title">ChocoMinto Fumo</h3>
+            <h3 id="logo-title">ChocoMinto Studios Fumo</h3>
             <nav id="nav-bar">
                 <ul>
                     <li>
@@ -36,6 +36,7 @@
         </header>
         <section id="main-section">
             <div id="get-started">
+                <h2 id=title1>ChocoMinto Studios Fumo</h2>
                 <h2 id="title">Get the best Fumos Fumos in Brazil</h2>
 
                 <div class="main-content-section">
@@ -86,7 +87,7 @@
                     </div>
                     <div class="pricing" id="pricing-3">
                         <img src="images/touhou-touhou-fumo.gif" alt="" class="fumo">
-                        <h1 class="pricing-title">Cirno
+                        <h1 class="pricing-title">Cirno Spinning
                             <p>USD$25.00</p>
                         </h1>
                     </div>
